yamlfiles/svc_deploy_test1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test1
spec:
  selector:
    app: test
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      imagePullSecrets:
      - name: dockerhub-secret  # 여기 추가
      containers:
      - name: test
        image: chlwhdals264/keduitlab:test1
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
