yamlfiles/svc_deploy_test2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test2
spec:
  selector:
    app: test2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test2
  template:
    metadata:
      labels:
        app: test2
    spec:
      imagePullSecrets:
      - name: dockerhub-secret  # 여기 추가
      containers:
      - name: test2
        image: chlwhdals264/keduitlab:test2
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
